@@ -1,4 +1,8 @@
 2006-06-09  Jean-Louis Martineau <martineau@zmanda.com>
+	* recover-src/amrecover.c (sigint_handler): Call send_command only if
+						    amindexd is aliave.
+
+2006-06-09  Jean-Louis Martineau <martineau@zmanda.com>
 	* common-src/util.c (connect_port): ETIMEDOUT is a fatal error.
 
 2006-06-09  Jean-Louis Martineau <martineau@zmanda.com>
